Bug 515870: Fix compiler warnings regarding unsigned char * vs. char *. r=nelson. Modified Files: 	cmd/ssltap/ssltap.c lib/certdb/alg1485.c lib/certdb/certdb.c 	lib/pkcs7/certread.c